fdo#68076 RTF import: default font had priority over the specified one

Regression from 60c17b2873506ed8b068b34840aecda0c1d9bd65.

Change-Id: Ie16d611622e6a814d5cbea00c3f992cd9ecba027